feat: Add a tablet version

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>    
                 </ul>      
     </section>
-    <section class="strengths">         
+    <section class="strengths">   
             <h1 class="strengths__header header">MOCNE STRONY</h1>
                 <ul class="strengths__content">
                     <li class="strengths__box">
@@ -99,11 +99,11 @@
                             <p class="contact__paragraph contact__paragraph-big">TELEFON</p>
                             <p class="contact__paragraph">509 897 077</p>
                         </div>
-                    </li>
-                    <a href="https://goo.gl/maps/VEqdDyyJKTw4Ec2NA">
-                        <img class="contact__map" src="images/map.png" alt="map">
-                    </a>        
+                    </li>     
                 </ul>  
+                <a href="https://goo.gl/maps/VEqdDyyJKTw4Ec2NA" class="contact__link">
+                    <img class="contact__map" src="images/map.png" alt="map">
+                </a>  
         </div>            
     </section>
     <footer class="footer">
