feat: Add a first version of responsive website v0.1

--- a/index.html
+++ b/index.html
@@ -15,21 +15,26 @@
 <body>
     <div class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
+        <img class="navbar__phonePopup" src="images/widget.png" alt="phoneNumber">
+        <p class="navbar__phone">509 897 077</p>
     </div>
     <section class="greeting">
+            <img class="greeting__nav navigation" src="images/greetingNav.png" alt="navigation">
         <article class="greeting__text">
-            <h1 class="greeting__header header"><span class="greeting__name">MARTA</span><span class="greeting__surname">BIELAN</span></h1>
+            <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
         </article>
     </section>
     <section class="introduction">
+            <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
         <article class="introduction__text">
             <h1 class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
-            <p class="introduction__readMore">czytaj więcej</p>
+            <!-- <p class="introduction__readMore">czytaj więcej</p> -->
         </article>
     </section>
     <section class="fields">
+            <img class="fields__nav navigation" src="images/fieldsNav.png" alt="navigation">
             <h1 class="fields__header header">DZIEDZINY PRAWA</h1>
                 <ul class="fields__content">
                     <li class="fields__box">
@@ -46,38 +51,41 @@
                     </li>
                     <li class="fields__box">
                         <img class="fields__icon" src="images/criminal.png" alt="handcuffs">
-                        <p class="fields__name">PRAWO</br>KARNE</p>
+                        <p class="fields__name fields__criminal">PRAWO</br>KARNE</p>
                     </li>    
                 </ul>      
     </section>
     <section class="strengths">   
+            <img class="strengths__nav navigation" src="images/strengthsNav.png" alt="navigation">
             <h1 class="strengths__header header">MOCNE STRONY</h1>
                 <ul class="strengths__content">
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__hand" src="images/involvment.png" alt="hands">
                         <p class="strengths__name">ZAANGAŻOWANIE</p>
-                        <p class="strengths__paragraph hand__paragraph">Pewność, że sprawa będzie prowadzona z najwyższą starannością przeze mnie, a wszystkie jej aspekty omawiane z klientem i przejrzyście mu wyjaśniane.</p>
+                        <p class="strengths__paragraph hand__paragraph">Pewność, że sprawa będzie prowadzona <br> z najwyższą starannością przeze mnie, <br> a wszystkie jej aspekty omawiane <br> z klientem i przejrzyście mu wyjaśniane.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__star" src="images/professionalism.png" alt="star">
                         <p class="strengths__name">PROFESJONALIZM</p>
-                        <p class="strengths__paragraph star__paragraph">Podwyższanie swoich kwalifikacji poprzez udział w szkoleniach i konferencjach naukowych.</p>
+                        <p class="strengths__paragraph star__paragraph">Podwyższanie swoich kwalifikacji <br> poprzez udział w szkoleniach <br> i konferencjach naukowych.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__light" src="images/creativity.png" alt="lightBulb">
                         <p class="strengths__name">KREATYWNOŚĆ</p>
-                        <p class="strengths__paragraph light__paragraph">Pozwalająca uniknąć rutyny i poszukiwać nieszablonowych rozwiązań problemów klientów.</p>
+                        <p class="strengths__paragraph light__paragraph">Pozwalająca uniknąć rutyny <br> i poszukiwać nieszablonowych rozwiązań problemów klientów.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__arrow" src="images/talks.png" alt="arrows">
                         <p class="strengths__name">UMIEJĘTNOŚCI NEGOCJACYJNE</br>I MEDIACYJNE</p>
-                        <p class="strengths__paragraph arrow__paragraph">Przydatne gdy konsyliacja, szybkość lub pozasądowe rozwiązanie sporu leży w interesie klienta.</p>
+                        <p class="strengths__paragraph arrow__paragraph">Przydatne gdy konsyliacja, szybkość <br> lub pozasądowe rozwiązanie sporu leży <br> w interesie klienta.</p>
                     </li>
                 </ul>
     </section>
     <section class="contact">
+            <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
         <div class="contact__text">
-            <h1 class="contact__header header">KONTAKT</h1>
+            <div class="contact__container">
+                <h1 class="contact__header header">KONTAKT</h1>
                 <ul class="contact__content">
                     <li class="contact__box">
                         <img class="contact__icon contact__envelope" src="images/email.png" alt="envelope">
@@ -100,10 +108,12 @@
                             <p class="contact__paragraph">509 897 077</p>
                         </div>
                     </li>     
-                </ul>  
-                <a href="https://goo.gl/maps/VEqdDyyJKTw4Ec2NA" class="contact__link">
-                    <img class="contact__map" src="images/map.png" alt="map">
-                </a>  
+                </ul> 
+            </div> 
+                <a href="https://goo.gl/maps/VEqdDyyJKTw4Ec2NA" class="contact__link" target="_blank">
+                    <!-- <img class="contact__map" src="images/mapapin.png" alt="map"> -->
+                </a> 
+            
         </div>            
     </section>
     <footer class="footer">
@@ -113,5 +123,7 @@
             <p class="footer__text footer__text-right">Treść serwisu prawnie chroniona <span class="footer__name">Marta Bielan</span></p>
         </div>
     </footer>
+	<!-- <script src="script.js"></script> -->
+
 </body>
 </html>
