feat: Add link to navbar and contact; change second section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
         <img class="navbar__phonePopup" src="images/widget.png" alt="phoneNumber">
-        <p class="navbar__phone">509 897 077</p>
+        <a href="tel:+48509897077" class="navbar__phone">509 897 077</a>
     </div>
     <section class="greeting">
             <img class="greeting__nav navigation" src="images/greetingNav.png" alt="navigation">
@@ -29,7 +29,7 @@
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
         <article class="introduction__text">
             <h1 class="introduction__header header">O MNIE</h1>
-            <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
+            <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu.Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką.Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
             <!-- <p class="introduction__readMore">czytaj więcej</p> -->
         </article>
     </section>
@@ -91,7 +91,7 @@
                         <img class="contact__icon contact__envelope" src="images/email.png" alt="envelope">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">E-MAIL</p>
-                            <p class="contact__paragraph">bielan.marta@gmail.com</p>
+                            <a href="mailto:bielan.marta@gmail.com" class="contact__paragraph">bielan.marta@gmail.com</a>
                         </div>
                     </li>
                     <li class="contact__box">
@@ -105,13 +105,12 @@
                         <img class="contact__icon contact__phone" src="images/phone.png" alt="phone">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">TELEFON</p>
-                            <p class="contact__paragraph">509 897 077</p>
+                            <a href="tel:+48509897077" class="contact__paragraph">509 897 077</a>
                         </div>
                     </li>     
                 </ul> 
             </div> 
                 <a href="https://goo.gl/maps/VEqdDyyJKTw4Ec2NA" class="contact__link" target="_blank">
-                    <!-- <img class="contact__map" src="images/mapapin.png" alt="map"> -->
                 </a> 
             
         </div>            
