feat: Add animation to destop version in greeting section

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <div class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
-        <img class="navbar__phonePopup" src="images/widget.png" alt="phoneNumber">
-        <a href="tel:+48509897077" class="navbar__phone">509 897 077</a>
+        <!-- <img class="navbar__phonePopup" src="images/phonenum.png" alt="phoneNumber"> -->
+        <a href="tel:+48509897077" class="navbar__phonePopup"></a>
     </div>
     <section class="greeting">
-            <img class="greeting__nav navigation" src="images/greetingNav.png" alt="navigation">
+            <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
         <article class="greeting__text">
             <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
@@ -29,7 +29,7 @@
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
         <article class="introduction__text">
             <h1 class="introduction__header header">O MNIE</h1>
-            <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu.Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką.Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
+            <p class="introduction__paragraph paragraph">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
             <!-- <p class="introduction__readMore">czytaj więcej</p> -->
         </article>
     </section>
@@ -81,7 +81,7 @@
                     </li>
                 </ul>
     </section>
-    <section class="contact">
+    <!-- <section class="contact">
             <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
         <div class="contact__text">
             <div class="contact__container">
@@ -114,7 +114,7 @@
                 </a> 
             
         </div>            
-    </section>
+    </section> -->
     <footer class="footer">
         <div class="footer__content">
             <p class="footer__text footer__text-left">© 2019 MARTA BIELAN</p>
