feat: Add four sections on desktop version

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
     <div class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
-        <!-- <img class="navbar__phonePopup" src="images/phonenum.png" alt="phoneNumber"> -->
         <a href="tel:+48509897077" class="navbar__phonePopup"></a>
     </div>
     <section class="greeting">
@@ -62,22 +61,22 @@
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__hand" src="images/involvment.png" alt="hands">
                         <p class="strengths__name">ZAANGAŻOWANIE</p>
-                        <p class="strengths__paragraph hand__paragraph">Pewność, że sprawa będzie prowadzona <br> z najwyższą starannością przeze mnie, <br> a wszystkie jej aspekty omawiane <br> z klientem i przejrzyście mu wyjaśniane.</p>
+                        <p class="strengths__paragraph hand__paragraph">Pewność, że sprawa będzie prowadzona z najwyższą starannością przeze mnie, a wszystkie jej aspekty omawiane z klientem i przejrzyście mu wyjaśniane.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__star" src="images/professionalism.png" alt="star">
                         <p class="strengths__name">PROFESJONALIZM</p>
-                        <p class="strengths__paragraph star__paragraph">Podwyższanie swoich kwalifikacji <br> poprzez udział w szkoleniach <br> i konferencjach naukowych.</p>
+                        <p class="strengths__paragraph star__paragraph">Podwyższanie swoich kwalifikacji poprzez udział w szkoleniach i konferencjach naukowych.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__light" src="images/creativity.png" alt="lightBulb">
                         <p class="strengths__name">KREATYWNOŚĆ</p>
-                        <p class="strengths__paragraph light__paragraph">Pozwalająca uniknąć rutyny <br> i poszukiwać nieszablonowych rozwiązań problemów klientów.</p>
+                        <p class="strengths__paragraph light__paragraph">Pozwalająca uniknąć rutyny i poszukiwać nieszablonowych rozwiązań problemów klientów.</p>
                     </li>
                     <li class="strengths__box">
                         <img class="strengths__icon strengths__arrow" src="images/talks.png" alt="arrows">
                         <p class="strengths__name">UMIEJĘTNOŚCI NEGOCJACYJNE</br>I MEDIACYJNE</p>
-                        <p class="strengths__paragraph arrow__paragraph">Przydatne gdy konsyliacja, szybkość <br> lub pozasądowe rozwiązanie sporu leży <br> w interesie klienta.</p>
+                        <p class="strengths__paragraph arrow__paragraph">Przydatne gdy konsyliacja, szybkość lub pozasądowe rozwiązanie sporu leży w interesie klienta.</p>
                     </li>
                 </ul>
     </section>
