feat: Add a desktop version v0.2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <article class="introduction__text">
             <h1 class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
-            <!-- <p class="introduction__readMore">czytaj więcej</p> -->
         </article>
     </section>
     <section class="fields">
@@ -80,7 +79,7 @@
                     </li>
                 </ul>
     </section>
-    <!-- <section class="contact">
+    <section class="contact">
             <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
         <div class="contact__text">
             <div class="contact__container">
@@ -113,7 +112,7 @@
                 </a> 
             
         </div>            
-    </section> -->
+    </section>
     <footer class="footer">
         <div class="footer__content">
             <p class="footer__text footer__text-left">© 2019 MARTA BIELAN</p>
