feat: Change navigation element on the biggest version

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <!-- <div class="navbar">
+    <div class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
         <a href="tel:+48509897077" class="navbar__phonePopup"></a>
-    </div> -->
+    </div>
     <section class="greeting">
-            <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
         <article class="greeting__text">
+            <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
             <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
         </article>
     </section>
     <section class="introduction">
-            <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
         <article class="introduction__text">
+            <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
             <h1 class="introduction__header header">O MNIE</h1>
-            <p class="introduction__paragraph paragraph">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
+            <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
             <img class="introduction__image" src="images/courtroom.jpg" alt="point">
         </article>
     </section>
     <section class="fields">
-            <img class="fields__nav navigation" src="images/fieldsNav.png" alt="navigation">
             <div class="fields__container">
+                    <img class="fields__nav navigation" src="images/fieldsNav.png" alt="navigation">
                 <h1 class="fields__header header">DZIEDZINY PRAWA</h1>
                 <ul class="fields__content">
                     <li class="fields__box">
@@ -59,8 +59,8 @@
                
     </section>
     <section class="strengths">   
-            <img class="strengths__nav navigation" src="images/strengthsNav.png" alt="navigation">
             <div class="strengths__container">
+                    <img class="strengths__nav navigation" src="images/strengthsNav.png" alt="navigation">
                 <h1 class="strengths__header header">MOCNE STRONY</h1>
                 <ul class="strengths__content">
                     <li class="strengths__box">
@@ -87,8 +87,8 @@
             </div>            
     </section>
     <section class="contact">
-            <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
         <div class="contact__text">
+                <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
             <div class="contact__container">
                 <h1 class="contact__header header">KONTAKT</h1>
                 <ul class="contact__content">
