feat: Add animations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="responsive.css">
+    <link rel="stylesheet" type="text/css" href="aos.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -21,14 +22,14 @@
     <section class="greeting">
         <article class="greeting__text">
             <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
-            <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
+            <h1 data-aos="flip-up" class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
         </article>
     </section>
     <section class="introduction">
         <article class="introduction__text">
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
-            <h1 class="introduction__header header">O MNIE</h1>
+            <h1 data-aos="flip-up" class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
             <img class="introduction__image" src="images/courtroom.jpg" alt="point">
         </article>
@@ -38,19 +39,19 @@
                     <img class="fields__nav navigation" src="images/fieldsNav.png" alt="navigation">
                 <h1 class="fields__header header">DZIEDZINY PRAWA</h1>
                 <ul class="fields__content">
-                    <li class="fields__box">
+                    <li data-aos="fade-left" class="fields__box">
                         <img class="fields__icon" src="images/civil.png" alt="gavel">
                         <p class="fields__name">PRAWO</br>CYWILNE</p>
                     </li>
-                    <li class="fields__box">
+                    <li data-aos="fade-right" class="fields__box">
                         <img class="fields__icon" src="images/family.png" alt="scales">
                         <p class="fields__name">PRAWO</br>RODZINNE</p>
                     </li>
-                    <li class="fields__box">
+                    <li data-aos="fade-left" class="fields__box">
                         <img class="fields__icon" src="images/economic.png" alt="court">
                         <p class="fields__name">PRAWO</br>GOSPODARCZE</p>
                     </li>
-                    <li class="fields__box">
+                    <li data-aos="fade-right" class="fields__box">
                         <img class="fields__icon" src="images/criminal.png" alt="handcuffs">
                         <p class="fields__name fields__criminal">PRAWO</br>KARNE</p>
                     </li>    
@@ -63,22 +64,22 @@
                     <img class="strengths__nav navigation" src="images/strengthsNav.png" alt="navigation">
                 <h1 class="strengths__header header">MOCNE STRONY</h1>
                 <ul class="strengths__content">
-                    <li class="strengths__box">
+                    <li data-aos="fade-left" class="strengths__box">
                         <img class="strengths__icon strengths__hand" src="images/involvment.png" alt="hands">
                         <p class="strengths__name">ZAANGAŻOWANIE</p>
                         <p class="strengths__paragraph hand__paragraph">Pewność, że sprawa będzie prowadzona z najwyższą starannością przeze mnie, a wszystkie jej aspekty omawiane z klientem i przejrzyście mu wyjaśniane.</p>
                     </li>
-                    <li class="strengths__box">
+                    <li data-aos="fade-right" class="strengths__box">
                         <img class="strengths__icon strengths__star" src="images/professionalism.png" alt="star">
                         <p class="strengths__name">PROFESJONALIZM</p>
                         <p class="strengths__paragraph star__paragraph">Podwyższanie swoich kwalifikacji poprzez udział w szkoleniach i konferencjach naukowych.</p>
                     </li>
-                    <li class="strengths__box">
+                    <li data-aos="fade-left" class="strengths__box">
                         <img class="strengths__icon strengths__light" src="images/creativity.png" alt="lightBulb">
                         <p class="strengths__name">KREATYWNOŚĆ</p>
                         <p class="strengths__paragraph light__paragraph">Pozwalająca uniknąć rutyny i poszukiwać nieszablonowych rozwiązań problemów klientów.</p>
                     </li>
-                    <li class="strengths__box">
+                    <li data-aos="fade-right" class="strengths__box">
                         <img class="strengths__icon strengths__arrow" src="images/talks.png" alt="arrows">
                         <p class="strengths__name">UMIEJĘTNOŚCI NEGOCJACYJNE</br>I MEDIACYJNE</p>
                         <p class="strengths__paragraph arrow__paragraph">Przydatne gdy konsyliacja, szybkość lub pozasądowe rozwiązanie sporu leży w interesie klienta.</p>
@@ -92,21 +93,21 @@
             <div class="contact__container">
                 <h1 class="contact__header header">KONTAKT</h1>
                 <ul class="contact__content">
-                    <li class="contact__box">
+                    <li data-aos="fade-left" class="contact__box">
                         <img class="contact__icon contact__envelope" src="images/email.png" alt="envelope">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">E-MAIL</p>
                             <a href="mailto:bielan.marta@gmail.com" class="contact__paragraph">bielan.marta@gmail.com</a>
                         </div>
                     </li>
-                    <li class="contact__box">
+                    <li data-aos="fade-right" class="contact__box">
                         <img class="contact__icon contact__point" src="images/address.png" alt="point">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">ADRES</p>
                             <p class="contact__paragraph">Św. Stanisława 9/12</br>62-800 Kalisz</p>
                         </div>
                     </li>
-                    <li class="contact__box">
+                    <li data-aos="fade-left" class="contact__box">
                         <img class="contact__icon contact__phone" src="images/phone.png" alt="phone">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">TELEFON</p>
@@ -128,6 +129,13 @@
         </div>
     </footer>
 	<!-- <script src="script.js"></script> -->
-
+    <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="aos.js"></script>
+    <script type="text/javascript">
+        AOS.init({
+            offset: 200,
+            duration: 1000,
+        } );
+    </script>
 </body>
 </html>
